# PicoLang

./: .gitignore  README.md  publish.sh  pyproject.toml  setup.py  test.py
dictionaries/: afrikaans.txt  albanian.txt  armenian.txt  basque.txt  bengali.txt  bulgarian.txt  catalan.txt  czech.txt  danish.txt  dutch.txt  english.txt  esperanto.txt  estonian.txt  finnish.txt  french.txt  german.txt  greek.txt  hungarian.txt  indonesian.txt  italian.txt  kabyle.txt  kazakh.txt  latvian.txt  lithuanian.txt  macedonian.txt  norwegian.txt  occitan.txt  polish.txt  portuguese.txt  romanian.txt  russian.txt  serbian.txt  slovak.txt  slovenian.txt  spanish.txt  swedish.txt  turkish.txt  ukrainian.txt  vietnamese.txt
picolang/: languages.py  utils.py
scripts/: compile_dictionaries.py  print_languages.py
